Improvements Signed-off-by:Ondro Mihalyi <mihalyi@omnifish.ee>