@@ -6,11 +6,14 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <exec.mainClass>ee.omnifish.glassfish.vt.EmbeddedGlassfishApp</exec.mainClass>
         <glassfish.embedded.version>7.0.14</glassfish.embedded.version>
         <exec.executable>java</exec.executable>
+        <exec.defaultVmArgs>--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.naming/javax.naming.spi=ALL-UNNAMED
+            -Dhttp.port=${http.port} -Djdk.tracePinnedThreads=full -Djdk.trackAllThreads=true -Xmx1024m</exec.defaultVmArgs>
+        <exec.args>${exec.defaultVmArgs} -cp ${project.build.directory}/classes:${project.build.directory}/dependencies/* ${exec.mainClass} ${exec.appArgs}</exec.args>
     </properties>
     <name>PlayWithLoom: Embedded GlassFish App</name>
     <dependencies>
@@ -48,6 +51,7 @@
                             <argument>-Dhttp.port=${http.port}</argument>
                             <argument>-Djdk.tracePinnedThreads=full</argument>
                             <argument>-Djdk.trackAllThreads=true</argument>
+                            <argument>-Xmx1024m</argument>
                             <argument>-cp</argument>
                             <argument>${project.build.directory}/classes:${project.build.directory}/dependencies/*</argument>
                             <argument>${exec.mainClass}</argument>
